kubernetes/workloads/apps/media-server/prowlarr/manifests/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media-server
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
    - name: prowlarr-http
      port: 9696
      protocol: TCP
      targetPort: prowlarr-http
    - name: monitoring
      port: 9707
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media-server
  labels:
    app.kubernetes.io/name: prowlarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prowlarr.${DOMAIN}
spec:
  parentRefs:
    - name: private
      namespace: networking
      sectionName: https
  hostnames:
    - prowlarr.${DOMAIN}
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
